<resources>
    <string name="app_name">Academia</string>
    <string name="text_register_click">New to this app? Click here to register!</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="login_welcome_msg_1">Hi there,</string>
    <string name="login_welcome_msg_2">welcome back!</string>
    <string name="login_email_hint">thejohndoe@gmail.com</string>
    <string name="login_username_hint">johndoe</string>
    <string name="login_password_hint">password</string>
    <string name="registration_msg">User Registration</string>
    <string name="registration_name">John Doe</string>
    <string name="registration_credentials">Senior Software Engineer, Student</string>
    <string name="error_registration_email">Please enter a valid non-existing email address</string>
    <string name="error_registration_username">Username is already taken!</string>
    <string name="error_registration_password">Password must be at least 6 characters!</string>
    <string name="error_registration_confirm_password">Password do not match!</string>
    <string name="button_registration">Register</string>
    <string name="profile_msg">User Profile</string>
    <string name="profile_name">John Doe</string>
    <string name="profile_username">johndoe</string>
    <string name="profile_credentials">Student at SJSU</string>
    <string name="profile_account_type_standard">Standard</string>
    <string name="profile_account_type_reviewer">Reviewer</string>
    <string name="profile_save_changes">Save Changes</string>
    <string name="view_tab">View</string>
    <string name="comments_tab">Comments</string>
    <string name="project_title">IEEE Article</string>
    <string name="version_prompt">Document Version</string>
    <string name="button_save_document">Save Changes</string>
    <string name="review_activity_header">Review Portal</string>
    <string name="delete_review_button">Delete Review</string>

    <string-array name="themes">
        <item>Night Sky (Default)</item>
        <item>Mountain and Field</item>
    </string-array>

</resources>