<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_splash">

    <TextView
        android:id="@+id/tv_userlogin_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/days_one"
        android:text="@string/login_app_name"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_msg1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_msg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/days_one"
        android:text="@string/login_welcome_msg_1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/tv_userlogin_appname" />

    <TextView
        android:id="@+id/tv_welcome_msg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/days_one"
        android:text="@string/login_welcome_msg_2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_welcome_msg1"
        app:layout_constraintTop_toTopOf="@+id/tv_welcome_msg1" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/days_one"
        android:text="Username"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="300dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/days_one"
        android:hint="username"
        android:textColorHint="@color/colorCommentGrey"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/days_one"
        android:text="Password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/days_one"
        android:hint="@string/login_password_hint"
        android:textColorHint="@color/colorCommentGrey"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <Button
        android:id="@+id/button_userlogin"
        style="@android:style/Widget.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:fontFamily="@font/days_one"
        android:text="@string/button_login"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_userregister"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/button_userregister"
        style="@android:style/Widget.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/days_one"
        android:text="@string/button_register"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername" />

</androidx.constraintlayout.widget.ConstraintLayout>