<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tv_registration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/days_one"
        android:text="@string/registration_msg"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/days_one"
        android:text="Choose a Username"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/tv_registration_text" />

    <EditText
        android:id="@+id/editTextRegisterUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/days_one"
        android:hint="@string/login_username_hint"
        android:inputType="textPersonName"
        android:textColor="#009688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_username" />

    <TextView
        android:id="@+id/tv_username_failure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:fontFamily="@font/days_one"
        android:text="Username is already taken!"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterUsername" />

    <TextView
        android:id="@+id/tv_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/days_one"
        android:text="Enter a Password"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterUsername" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/days_one"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textColor="#009688"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_password" />

    <TextView
        android:id="@+id/tv_password_failure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:fontFamily="@font/days_one"
        android:text="Password must be atleast 6 characters!"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

    <TextView
        android:id="@+id/tv_register_confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/days_one"
        android:text="Confirm Password"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

    <TextView
        android:id="@+id/tv_confirm_failure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:fontFamily="@font/days_one"
        android:text="Password don't match!"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterConfirmPassword" />

    <EditText
        android:id="@+id/editTextRegisterConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/days_one"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textColor="#009688"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_confirmpassword" />

    <TextView
        android:id="@+id/tv_register_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/days_one"
        android:text="Profile"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterConfirmPassword" />

    <TextView
        android:id="@+id/tv_register_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/days_one"
        android:text="Enter your Full Name"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_profile_text" />

    <EditText
        android:id="@+id/editTextRegisterFullName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/days_one"
        android:hint="@string/registration_name"
        android:inputType="textPersonName"
        android:textColor="#009688"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_full_name" />

    <TextView
        android:id="@+id/tv_register_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/days_one"
        android:text="Industry Credentials"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_register_full_name"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterFullName" />

    <EditText
        android:id="@+id/editTextRegisterCredentials"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/days_one"
        android:hint="@string/registration_credentials"
        android:inputType="textPersonName"
        android:textColor="#009688"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterFullName"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_credentials" />

    <Button
        android:id="@+id/button_save_registration"
        style="@android:style/Widget.Button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:fontFamily="@font/days_one"
        android:text="@string/button_registration"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterCredentials" />


</androidx.constraintlayout.widget.ConstraintLayout>