<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startreview_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nightsky_theme">


    <EditText
        android:id="@+id/editTextStartReviewTitle"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="380dp"
        android:height="70dp"
        android:background="@color/colorReviewLight"
        android:fontFamily="@font/antic"
        android:gravity="center"
        android:text="@string/project_title"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/version_dropdown"
        android:layout_width="380dp"
        android:layout_height="30dp"
        android:background="@color/colorReviewDark"
        android:clickable="true"
        android:focusable="true"
        android:foregroundGravity="center"
        android:gravity="center"
        android:prompt="@string/version_prompt"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/editTextStartReviewTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextStartReviewTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartReviewTitle" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/review_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#CCFFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/version_dropdown"
        app:tabBackground="@drawable/tab_background"
        app:tabIndicatorColor="@color/colorBlack"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/colorPrimaryDark"
        app:tabTextColor="@color/colorBlack">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/button_save_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_tabs" />

    <Button
        android:id="@+id/button_save_review"
        style="@android:style/Widget.Button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/antic"
        android:text="@string/button_save_document"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_save_changes_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="#CCFFFFFF"
        android:fontFamily="@font/antic"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="@+id/button_save_review"
        app:layout_constraintStart_toStartOf="@+id/button_save_review"
        app:layout_constraintTop_toTopOf="@+id/button_save_review" />

</androidx.constraintlayout.widget.ConstraintLayout>